<resources>
    <string name="app_name">GossipBox</string>
    <string name="create_new_account">CREATE NEW ACCOUNT</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="create">CREATE</string>

    <string name="username">UserName</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_">Main_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
