<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".Reg_activity">

    <include
        android:id="@+id/register_toolbar"
        layout="@layout/app_bar_layout" />


    <Button
        android:id="@+id/register_create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14sp"
        android:layout_marginTop="360sp"
        android:background="@drawable/roundbutton"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="@string/create"
        android:textColor="@android:color/white" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14sp"
        android:layout_marginStart="14sp"
        android:layout_marginTop="120sp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_profile"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="14sp"
        android:layout_marginStart="14sp"
        android:layout_marginTop="280sp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14sp"
        android:layout_marginStart="14sp"
        android:layout_marginTop="200sp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"/>
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>