<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".Login_Page">

    <Button
        android:id="@+id/login_reg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400sp"
        android:background="@drawable/roundbutton"
        android:padding="10sp"
        android:text="@string/create_new_account"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="14sp"
        android:layout_marginTop="280sp"
        android:background="@drawable/roundbutton"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:text="SIGN IN"
        android:textColor="@android:color/white" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14sp"
        android:layout_marginStart="14sp"
        android:layout_marginTop="120sp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="14sp"
        android:layout_marginStart="14sp"
        android:layout_marginTop="200sp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_password"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14sp"
        android:layout_marginTop="22sp"
        android:text="GossipBox"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <Button
        android:id="@+id/login_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480sp"
        android:background="@drawable/roundbutton"
        android:padding="10sp"
        android:text="Forgot Password?"
        android:textColor="@android:color/white" />

</RelativeLayout>